plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

javafx {
    version = "24.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'Auth.Main'
    applicationDefaultJvmArgs = [
        '--enable-native-access=ALL-UNNAMED',
        '-Dprism.order=sw'
    ]
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
}
